<resources>

    <string name="app_name">小素</string>
    <string name="app_machine_manager">佛号管理</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    
    <string name="menu_calendar">日历</string>
    <string name="menu_machine">念佛机</string>
    <string name="menu_circle">师兄圈</string>
    
    <string name="btn_manager_add">+</string>
    <string name="btn_manager_del">-</string>
    <string name="btn_manager_close">X</string>
    <string name="btn_manager">管理</string>
    <string name="btn_reset">重置</string>
    <string name="btn_yes">好</string>
    <string name="btn_ok">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_read">咏诵</string>
    
    <string name="sub_title_sentence">佛号</string>
    <string name="sub_title_accomplish">成就</string>
    <string name="sub_title_count">次数</string>
    
    
    <string name="notify_hint">小素提醒您.</string>
    <string name="notify_title_format">今天是%1$s,请记得吃素哦.</string>
    <string name="notify_title_default">今天要记得吃素哦.</string>
    
    
    

</resources>